# project

./: .dockerignore  .gitignore  Dockerfile  README.md  build.sh  docker-compose.yml  pyproject.toml  run.sh  run_test.sh
.github/workflows/: test.yml
task_planner/: main.py
task_planner/application/: benchmarking.py  exceptions.py  middlewares.py  models.py  utils.py
task_planner/configs/: config.py  config.yaml
task_planner/handlers/: api_handler.py  calendar_handler.py  tasks_handler.py
task_planner/static/: styles.css
task_planner/templates/: add_task.html  base.html  calendar.html  delete_task.html  download.html  menu.html  search_task.html  show_calendar.html  show_task.html  show_tasks.html  update_task.html  year_calendar.html
task_planner/workers/: db_worker.py
test/: test_app.py  test_config.yaml
