[tool.poetry]
name = "tasks-planner"
version = "0.1.0"
description = ""
authors = ["HelenVR"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
apscheduler = "^3.11.0"
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"
databases = "^0.9.0"
loguru = "^0.7.3"
pyyaml = "^6.0.2"
ujson = "^5.10.0"
jinja2 = "^3.1.6"
black = "^25.1.0"
pytest = "^8.3.5"
fastapi = {extras = ["all"], version = "^0.115.12"}
h11 = "0.14.0"
httpcore = "1.0.7"
httpx = "0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

